--- a/firstLayout/piroll.html
+++ b/firstLayout/piroll.html
@@ -7,6 +7,7 @@
     <title>Piroll</title>
     <link rel="stylesheet" href="piroll.css">
     <link rel="stylesheet" href="./Fonts/Icon-font-7-stroke-PIXEDEN-v-1.2.0/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="./Fonts/Icon-font-7-stroke-PIXEDEN-v-1.2.0/pe-icon-7-stroke/css/helper.css">
 </head>
 
 <body>
@@ -65,23 +66,43 @@
         </div>
 
         <div id="numbers">
-            <div id="portfolio">
-                <span class="pe-7s-portfolio"></span>
-                <p>548</p>
-                <p>PROJECTS COMPLITED</p>
-            </div>
+            <ul>
+                <li id="portfolio">
+                    <span class="pe-7s-portfolio pe-3x"></span>
+                    <div>
+                        <p>548</p>
+                        <p>PROJECTS COMPLITED</p>
+                    </div>
+                </li>
 
-            <div id="clock">
-                <span class="pe-7s-clock"></span>
-            </div>
+                <li id="clock">
+                    <span class="pe-7s-clock pe-3x"></span>
+                    <div>
+                        <p>1465</p>
+                        <p>WORKING HOURS</p>
+                    </div>
+                </li>
 
-            <div id="star">
-                <span class="pe-7s-star"></span>
-            </div>
+                <li id="star">
+                    <span class="pe-7s-star pe-3x"></span>
+                    <div>
+                        <p>612</p>
+                        <p>POSITIVE FEEDBACKS</p>
+                    </div>
+                </li>
 
-            <div id="like">
-                <span class="pe-7s-like"></span>
-            </div>
+                <li id="like">
+                    <span class="pe-7s-like pe-3x"></span>
+                    <div>
+                        <p>735</p>
+                        <p>HAPPY CLIENTS</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div id="work">
+            
         </div>
     </div>
 </body>
