--- a/firstLayout/piroll.html
+++ b/firstLayout/piroll.html
@@ -102,9 +102,34 @@
         </div>
 
         <div id="work">
-            
+            <div class="row1">1 1</div>
+            <div class="row1">1 2</div>
+            <div class="row1">1 3</div>
+            <div class="row1">1 4</div>
+
+            <div class="row2">2 1</div>
+            <div class="row2">2 2</div>
+            <div class="row2">2 3</div>
+            <div class="row2">2 4</div>
         </div>
     </div>
+
+    <script>
+        /*бодбор высот для квадратных ячеек таблицы #work*/
+        let tableCells = document.querySelectorAll("#work .row1, .row2");
+        let minHeight;
+        for (let i = 0; i < tableCells.length; i++) {
+            if (i === 0) minHeight = Math.round(tableCells[i].clientWidth);
+            tableCells[i].style.height = minHeight + "px";
+        }
+
+        window.onresize = () => {
+            for (let i = 0; i < tableCells.length; i++) {
+                if (i === 0) minHeight = Math.round(tableCells[i].clientWidth);
+                tableCells[i].style.height = minHeight + "px";
+            }
+        };
+    </script>
 </body>
 
 
