--- a/firstLayout/piroll.html
+++ b/firstLayout/piroll.html
@@ -102,15 +102,18 @@
         </div>
 
         <div id="work">
-            <div class="row1">1 1</div>
-            <div class="row1">1 2</div>
-            <div class="row1">1 3</div>
-            <div class="row1">1 4</div>
+            <div id="table">
+                <div class="row1"><span class="pe-7s-look pe-3x"></span></div>
+                <div class="row1"><span class="pe-7s-look pe-3x"></span></div>
+                <div class="row1"><span class="pe-7s-look pe-3x"></span></div>
+                <div class="row1"><span class="pe-7s-look pe-3x"></span></div>
 
-            <div class="row2">2 1</div>
-            <div class="row2">2 2</div>
-            <div class="row2">2 3</div>
-            <div class="row2">2 4</div>
+                <div class="row2"><span class="pe-7s-look pe-3x"></span></div>
+                <div class="row2"><span class="pe-7s-look pe-3x"></span></div>
+                <div class="row2"><span class="pe-7s-look pe-3x"></span></div>
+                <div class="row2"><span class="pe-7s-look pe-3x"></span></div>
+            </div>
+            <div id="loadMore"><p>LOAD MORE WORK</p></div>
         </div>
     </div>
 
