--- a/firstLayout/piroll.html
+++ b/firstLayout/piroll.html
@@ -115,6 +115,67 @@
             </div>
             <div id="loadMore"><p>LOAD MORE WORK</p></div>
         </div>
+
+        <div id="workProcess">
+            <p>Our Work Process</p>
+            <p>Was years it seasons was there form he in in them together over that, 
+                third sixth gathered female creeping bearing behold years.</p>
+            <div id="video"><img src="./Images/workProcess/video.png"></div>
+        </div>
+
+        <div id="services">
+            <ul>
+                <li>
+                    <a href="#"><span class="pe-7s-diamond pe-3x"></span></a>
+                    <p>UI / UX DESIGN</p>
+                    <p>Be set fourth land god darkness  make it wherein own</p>
+                </li>
+                <li>
+                    <a href="#"><span class="pe-7s-arc pe-3x"></span></a>
+                    <p>WEB DEVELOPMENT</p>
+                    <p>A she'd them bring void moving  third she'd kind fill</p>
+                </li>
+                <li>
+                    <a href="#"><span class="pe-7s-phone pe-3x"></span></a>
+                    <p>APP / MOBILE</p>
+                    <p>Dominion man second spirit he, earth they're creeping</p>
+                </li><li>
+                    <a href="#"><span class="pe-7s-joy pe-3x"></span></a>
+                    <p>GAME DESIGN</p>
+                    <p>Morning his saying moveth it  multiply appear life be</p>
+                </li>
+
+                <li>
+                    <a href="#"><span class="pe-7s-plane pe-3x"></span></a>
+                    <p>SEO / MARKETING</p>
+                    <p>Give won't after land fill creeping  meat you, may</p>
+                </li><li>
+                    <a href="#"><span class="pe-7s-star pe-3x"></span></a>
+                    <p>PHOTOGRAPHY</p>
+                    <p>Creepeth one seas cattle grass  give moving saw give</p>
+                </li><li>
+                    <a href="#"><span class="pe-7s-magic-wand pe-3x"></span></a>
+                    <p>GRAPHIC DESIGN</p>
+                    <p>Open, great whales air rule for,  fourth life whales</p>
+                </li><li>
+                    <a href="#"><span class="pe-7s-paint-bucket pe-3x"></span></a>
+                    <p>ILLUSTRATIONS</p>
+                    <p>Whales likeness hath, man kind  for them air two won't</p>
+                </li>
+            </ul>
+        </div>
+
+        <div id="testimonials">
+            <p>“ Outstanding job and exceeded all expectations. It was a pleasure 
+                to work with them on a sizable first project and am looking 
+                forward to start the next one asap.”</p>
+            <p>MICHAEL HOPKINS</p>
+            <ul id="pagination">
+                <li><a href="#"><img src="./Images/testimonials/pagination1.png"></a></li>
+                <li><a href="#"><img src="./Images/testimonials/pagination2.png"></a></li>
+                <li><a href="#"><img src="./Images/testimonials/pagination1.png"></a></li>
+            </ul>
+        </div>
     </div>
 
     <script>
