first layout ended

--- a/firstLayout/piroll.html
+++ b/firstLayout/piroll.html
@@ -113,12 +113,14 @@
                 <div class="row2"><span class="pe-7s-look pe-3x"></span></div>
                 <div class="row2"><span class="pe-7s-look pe-3x"></span></div>
             </div>
-            <div id="loadMore"><p>LOAD MORE WORK</p></div>
+            <div id="loadMore">
+                <p>LOAD MORE WORK</p>
+            </div>
         </div>
 
         <div id="workProcess">
             <p>Our Work Process</p>
-            <p>Was years it seasons was there form he in in them together over that, 
+            <p>Was years it seasons was there form he in in them together over that,
                 third sixth gathered female creeping bearing behold years.</p>
             <div id="video"><img src="./Images/workProcess/video.png"></div>
         </div>
@@ -128,46 +130,50 @@
                 <li>
                     <a href="#"><span class="pe-7s-diamond pe-3x"></span></a>
                     <p>UI / UX DESIGN</p>
-                    <p>Be set fourth land god darkness  make it wherein own</p>
+                    <p>Be set fourth land god darkness make it wherein own</p>
                 </li>
                 <li>
                     <a href="#"><span class="pe-7s-arc pe-3x"></span></a>
                     <p>WEB DEVELOPMENT</p>
-                    <p>A she'd them bring void moving  third she'd kind fill</p>
+                    <p>A she'd them bring void moving third she'd kind fill</p>
                 </li>
                 <li>
                     <a href="#"><span class="pe-7s-phone pe-3x"></span></a>
                     <p>APP / MOBILE</p>
                     <p>Dominion man second spirit he, earth they're creeping</p>
-                </li><li>
+                </li>
+                <li>
                     <a href="#"><span class="pe-7s-joy pe-3x"></span></a>
                     <p>GAME DESIGN</p>
-                    <p>Morning his saying moveth it  multiply appear life be</p>
+                    <p>Morning his saying moveth it multiply appear life be</p>
                 </li>
 
                 <li>
                     <a href="#"><span class="pe-7s-plane pe-3x"></span></a>
                     <p>SEO / MARKETING</p>
-                    <p>Give won't after land fill creeping  meat you, may</p>
-                </li><li>
+                    <p>Give won't after land fill creeping meat you, may</p>
+                </li>
+                <li>
                     <a href="#"><span class="pe-7s-star pe-3x"></span></a>
                     <p>PHOTOGRAPHY</p>
-                    <p>Creepeth one seas cattle grass  give moving saw give</p>
-                </li><li>
+                    <p>Creepeth one seas cattle grass give moving saw give</p>
+                </li>
+                <li>
                     <a href="#"><span class="pe-7s-magic-wand pe-3x"></span></a>
                     <p>GRAPHIC DESIGN</p>
-                    <p>Open, great whales air rule for,  fourth life whales</p>
-                </li><li>
+                    <p>Open, great whales air rule for, fourth life whales</p>
+                </li>
+                <li>
                     <a href="#"><span class="pe-7s-paint-bucket pe-3x"></span></a>
                     <p>ILLUSTRATIONS</p>
-                    <p>Whales likeness hath, man kind  for them air two won't</p>
+                    <p>Whales likeness hath, man kind for them air two won't</p>
                 </li>
             </ul>
         </div>
 
         <div id="testimonials">
-            <p>“ Outstanding job and exceeded all expectations. It was a pleasure 
-                to work with them on a sizable first project and am looking 
+            <p>“ Outstanding job and exceeded all expectations. It was a pleasure
+                to work with them on a sizable first project and am looking
                 forward to start the next one asap.”</p>
             <p>MICHAEL HOPKINS</p>
             <ul id="pagination">
@@ -176,10 +182,67 @@
                 <li><a href="#"><img src="./Images/testimonials/pagination1.png"></a></li>
             </ul>
         </div>
+
+        <div id="clients">
+            <ul>
+                <li><a href="#"><img src="./Images/clients/logo1.png"></a></li>
+                <li><a href="#"><img src="./Images/clients/logo2.png"></a></li>
+                <li><a href="#"><img src="./Images/clients/logo3.png"></a></li>
+                <li><a href="#"><img src="./Images/clients/logo4.png"></a></li>
+                <li><a href="#"><img src="./Images/clients/logo5.png"></a></li>
+            </ul>
+        </div>
+
+        <div id="needAProject">
+            <p>Need a Project?</p>
+            <p>Let us know what you're looking for in an agency. We'll take a look and see
+                if this could be the start of something beautiful.</p>
+            <form>
+                <input value="Your Name"></input>
+                <input value="Your Email"></input>
+                <input value="Your Title"></input>
+                <textarea>Your Comment</textarea>
+
+                <button type="submit">SEND MESSEGE</button>
+            </form>
+        </div>
+
+        <div id="footer">
+            <div>
+                <p>Piroll Design, Inc.</p>
+                <p>© 2017 Piroll. All rights reserved.
+                    Designed by robirurk.</p>
+            </div>
+
+            <div>
+                <p>hello@pirolltheme.com +44 987 065 908 </p>
+            </div>
+
+            <ul>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Carreer</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Legals</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Dribbble</a></li>
+            </ul>
+        </div>
     </div>
 
     <script>
-        /*бодбор высот для квадратных ячеек таблицы #work*/
+        /*подбор высот для квадратных ячеек таблицы #work*/
         let tableCells = document.querySelectorAll("#work .row1, .row2");
         let minHeight;
         for (let i = 0; i < tableCells.length; i++) {
